force-app/main/default/objects/Step__c/Step__c.object-meta.xml
<CustomObject>
    <label>Step</label>
    <pluralLabel>Steps</pluralLabel>
    <nameField>
        <label>Step Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>