force-app/main/default/objects/Step__c/fields/ApprovalProcessName__c.field-meta.xml
<CustomField>
    <fullName>ApprovalProcessName__c</fullName>
    <label>Approval Process Name</label>
    <type>Text</type>
    <length>80</length>
</CustomField>