force-app/main/default/objects/Step__c/fields/FieldsConfig__c.field-meta.xml
<CustomField>
    <fullName>FieldsConfig__c</fullName>
    <label>Fields Config</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>