force-app/main/default/objects/Step__c/fields/OnRejection__c.field-meta.xml
<CustomField>
    <fullName>OnRejection__c</fullName>
    <label>On Rejection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Stop</fullName><default>true</default><label>Stop Process</label></value>
            <value><fullName>Execute Stage</fullName><default>false</default><label>Execute Stage</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>