force-app/main/default/objects/Step__c/fields/RejectionStageId__c.field-meta.xml
<CustomField>
    <fullName>RejectionStageId__c</fullName>
    <label>Rejection Stage</label>
    <type>Lookup</type>
    <referenceTo>Stage__c</referenceTo>
    <relationshipLabel>Rejection Steps</relationshipLabel>
    <relationshipName>RejectionSteps</relationshipName>
</CustomField>