force-app/main/default/objects/Step__c/fields/RequiresApproval__c.field-meta.xml
<CustomField>
    <fullName>RequiresApproval__c</fullName>
    <label>Requires Approval</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>