force-app/main/default/objects/Step__c/fields/SkipConditionLogic__c.field-meta.xml
<CustomField>
    <fullName>SkipConditionLogic__c</fullName>
    <label>Skip Condition Logic</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>AND</fullName><default>true</default><label>AND — all conditions must match</label></value>
            <value><fullName>OR</fullName><default>false</default><label>OR — any condition must match</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>