force-app/main/default/objects/Step__c/fields/SkipConditionsConfig__c.field-meta.xml
<CustomField>
    <fullName>SkipConditionsConfig__c</fullName>
    <label>Skip Conditions Config</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>