force-app/main/default/objects/Step__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>MasterDetail</type>
    <referenceTo>Stage__c</referenceTo>
    <relationshipLabel>Steps</relationshipLabel>
    <relationshipName>Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>