force-app/main/default/objects/Step__c/fields/TargetObject__c.field-meta.xml
<CustomField>
    <fullName>TargetObject__c</fullName>
    <label>Target Object API Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>