force-app/main/default/objects/Step__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Create Record</fullName><default>false</default><label>Create Record</label></value>
            <value><fullName>Update Record</fullName><default>false</default><label>Update Record</label></value>
            <value><fullName>Notification</fullName><default>false</default><label>Notification</label></value>
            <value><fullName>HTTP Request</fullName><default>false</default><label>HTTP Request</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>