force-app/main/default/objects/Step__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <label>All Steps</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Type__c</columns>
    <columns>TargetObject__c</columns>
    <columns>Sequence__c</columns>
    <columns>IsRequired__c</columns>
</ListView>